# pyonelab

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  preppip.py  pyproject.toml  setup.py
.ci/: install_onelab_prebuilt.sh
.ci/req/: environment.3.7.txt
.ci/tests/: environment.3.7.yml
.github/workflows/: test.yml
dev/: install_onelab_prebuilt.py
dev/.ci/tests/: environment.3.7.yml  install_nix_win.sh
docker/: Dockerfile  Makefile
pyonelab/: __about__.py  __init__.py  getdp  gmsh  main.py
pyonelab/scripts/: install_onelab_prebuilt.sh
test/: test_getdp.py  test_gmsh.py  test_pyonelab.py
tests/: test_getdp.py  test_gmsh.py
